# Undergraduate_Research

./: .gitignore  OLD_SYSTEM_COMPATIBILITY.md  README.md  README_GYM.md  requirements.txt  setup.py
Game/: profile  requirements.txt  testing_perf_0  train_PPO.prof
Game_PPO/: files - Shortcut.lnk  requirements.txt
Learning/: ELO.ipynb  Gamblers_problem.ipynb  thing.ipynb
ai_scripts/: debug_ball_metrics.py  debug_state.py  test_ball_metrics.py  test_final_sprites.py  test_leg_sprites.py  test_normalization.py  test_old_system_compatibility.py  test_original_state.py  test_sprite_loading.py  test_training_basic.py  time_test.py
examples/: __init__.py  game_modes_demo.py  play_soccer.py  record_video.py  speed_demo.py  test_basic_env.py
jobs/: job.sh
old/: CMakeLists.txt  main.cpp
old/Docs/mics_abstract/: mics_abstract.aux  mics_abstract.fdb_latexmk  mics_abstract.fls  mics_abstract.tex
old/Docs/new_project_proposal/: Project_proposal.tex
old/Docs/paper_first_draft/: paper.aux
old/Docs/project_proposal/: Project_proposal.tex
old/Enviroment-backend/bindings/: bindings.cpp
old/Enviroment-backend/include/: Agent.h  Ball.h  Environment.h  Goal.h  Network.h  Parameters.h  Team.h  Vector2D.h
old/Enviroment-backend/src/: Agent.cpp  Ball.cpp  Environment.cpp  Network.cpp  Parameters.cpp  Team.cpp  Vector2D.cpp
old/scripts/: thing.ipynb
old/src/: main.py  params.py
old/src/AI/: OldPPO.py  RewardFunction.py
old/src/enviroment/: Ball.py  Player.py
old/src/functions/: ELO.py  Statistics.py  league.py
rllib_checkpoints/: algorithm_state.pkl  (+1 more)
(+647 files in other folders)
